// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
<DocumentFragment>
  .emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-0.emotion-0 {
  margin-right: 8px;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 0;
}

<div
    class="sui-box emotion-2"
  >
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly useState function 1`] = `
<DocumentFragment>
  .emotion-10.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-1.emotion-1 {
  margin-right: 8px;
}

.emotion-9 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-9.emotion-9 {
  margin-right: 0;
}

.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-0.emotion-0 {
  margin-right: 8px;
}

<div
    class="sui-box emotion-10"
  >
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-1"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-9"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
<DocumentFragment>
  .emotion-10.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-3.emotion-3 {
  margin-right: 8px;
}

.emotion-9 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-9.emotion-9 {
  margin-right: 0;
}

.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: grey;
  cursor: pointer;
}

.emotion-0.emotion-0 {
  margin-right: 8px;
}

<div
    class="sui-box emotion-10"
  >
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-3"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-0"
    />
    <div
      class="sui-box emotion-9"
    />
  </div>
</DocumentFragment>
`;
